src/test/deca/avecObjet/valid/public_field_access_other_object copy.deca
// Description :
//    Accès à un champ public via un autre objet.
//
// Resultats :
//    OK

class A {
    int x;
}

{
    A a = new A();
    a.x = 2;
    println(a.x);
}

