src/test/deca/avecObjet/invalid/selection_unknown_field.deca
// Description :
//    Accès à un champ inexistant dans une classe.
//
// Resultats :
//    Erreur contextuelle
//    Ligne 14 : Le membre z n'existe pas dans A

class A {
    int x;
}

{
    A a = new A();
    int y = a.z;
}

